--- a/index.html
+++ b/index.html
@@ -10,41 +10,72 @@
 		<!-- Custom CSS -->
 		<link href='./css/style.css' rel='stylesheet'>
 		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&display=swap" rel="stylesheet"> 
 	</head>
 	
-	<body>
-		<!-- Header -->
-		<header>
-			Product
-			Features
-			Pricing
-			Login
-		</header>
-		
-		<!-- Main -->
-		<main>
-			New
-			Monograph Dashboard
+	<body class='main-bg'>
+			<div class='main-size'>
+			<!-- Header -->
+			<header>
+				<nav class="navbar navbar-expand-lg navbar-light">
+					<a class="navbar-brand" href="#"><img src='./images/logo.svg'></a>
+					<button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+						<img class='nav-icon' src='./images/icon-hamburger.svg'>
+					</button>
 
-			Powerful insights into your team
-			Project planning and time tracking for agile teams
-
-			Schedule a demo
-			to see a live preview
-		</main>
-		
-		<!-- Footer -->
-		<footer>
-			<p class="attribution">
-				Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-				Coded by <a href="#">Your Name Here</a>.
-			</p>
-		</footer>
-		<!-- Bootstrap JS-->
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-		<!-- Custom JS -->
-		<script src='./js/script.js'></script>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<ul class="navbar-nav ml-lg-auto text-center">
+							<li class="nav-item mr-lg-5">
+								<a class="nav-link text-dark text-uppercase font-weight-bold" href="#">Product</a>
+							</li>
+							<li class="nav-item mr-lg-5">
+								<a class="nav-link text-dark text-uppercase font-weight-bold" href="#">Features</a>
+							</li>
+							<li class="nav-item mr-lg-5">
+								<a class="nav-link text-dark text-uppercase font-weight-bold" href="#">Pricing</a>
+							</li>
+							<li>
+								<div class='nav-decoration nav-item mr-lg-5 my-2 my-lg-0'></div>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link text-uppercase font-weight-bold" href="#">Login</a>
+							</li>	
+					</div>
+				</nav>
+			</header>
+			
+			<!-- Main -->
+			<main class='container-fluid'>
+				<div class='row'>
+					<div class='top col-lg-6 order-lg-2 mb-5'></div>
+					<div class='bottom col-lg-6 order-lg-1'>
+						<div class='top-line d-flex align-items-center mb-3 text-uppercase'>
+							<span class='span-new rounded-pill bg-dark text-white mr-3 font-weight-bold'>New</span>
+							<span class='span-mono'>Monograph Dashboard</span>
+						</div>
+						<h1 class='text-uppercase font-weight-bold'>Powerful insights into your team</h1>
+						<p class='text-project mb-3'>Project planning and time tracking for agile teams</p>
+						<div class='text-uppercase d-flex align-items-center'>
+							<p class='btn btn-danger text-white mr-3 font-weight-bold px-4 py-2 bottom-line text-schedule' role='button'>Schedule a demo</p>
+							<p class='bottom-line text-preview'>to see a preview</p>
+						</div>
+					</div>
+				</div>			
+			</main>
+			
+			<!-- Footer -->
+			<footer>
+				<p class="attribution">
+					Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+					Coded by <a href="#">Your Name Here</a>.
+				</p>
+			</footer>
+			<!-- Bootstrap JS-->
+			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+			<!-- Custom JS -->
+			<script src='./js/script.js'></script>
+		</div>
 	</body>
 </html>
